deploy/mighty-fine/mf-dep.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mighty-fine
  namespace: dev
  annotations:
    flux.weave.works/tag.podinfod: glob:*
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mighty-fine
  template:
    metadata:
      labels:
        app: mighty-fine
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: podinfod
        image: quay.io/brice/metrics-demo:v4-subscription-service       
        ports:
        - containerPort: 3000    
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
